Bug 894026 - Implement ES6 binary and octal literals.  r=till